# MonoProc

./: .gitignore  MonoPo.cabal  MonoProc.cabal  README.bib  README.md  README.pandoc
src/: PROC.hs  TestRD.hs  TestVB.hs
src/PROC/: Base.hs  Evaluating.hs  Flow.hs  MF.hs  Parsing.hs
src/PROC/MF/: Algorithm.hs  Analysis.hs  Available.hs  Flowable.hs  FreeNames.hs  Labelable.hs  Lattice.hs  UsedNames.hs
src/PROC/MF/Algorithm/: MFP.hs  MOP.hs
src/PROC/MF/Analysis/: AE.hs  CP.hs  LV.hs  RD.hs  VB.hs
test/: TestAE.hs  TestCP.hs  TestCP1.hs  TestCP2.hs  TestLV.hs  TestRD.hs  TestVB.hs
test/PROC/: Testing.hs
