name          : MonoProc
version       : 0.0.1.0
synopsis      : Live variable analysis of the a simple procedural programming language.
homepage      : https://github.com/pepijnkokke/MonoProc
license       : MIT
author        : Pepijn Kokke
maintainer    : pepijn.kokke@gmail.com
copyright     : (c) 2013 Pepijn Kokke, Wout Elsinghorst
category      : Language
build-type    : Simple
cabal-version : >= 1.8

library
  exposed-modules : PROC
  build-depends   : base == 4.5.*, uu-parsinglib == 2.8.*, uulib == 0.9.*,
                    monad-supply == 0.3.*, mtl == 2.1.*, containers == 0.4.2.*
  hs-source-dirs  : src